[project]
name = "deepfreqmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==0.28.0",
    "click>=8.4.1",
    "colorama>=0.4.6",
    "datasets==2.14.6",
    "diffusers==0.21.4",
    "ftfy>=6.3.1",
    "gitpython>=3.1.50",
    "huggingface-hub==0.20.3",
    "invisible-watermark==0.2.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.1.6",
    "lpips>=0.1.4",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pytorch-fid>=0.3.0",
    "pytorch-msssim>=1.0.0",
    "pywavelets>=1.8.0",
    "pyyaml>=6.0.3",
    "regex>=2026.5.9",
    "rich>=15.0.0",
    "safetensors>=0.7.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "tensorboardx>=2.6.5",
    "timm==0.9.10",
    "torch>=2.5.1",
    "torch-dct==0.1.6",
    "torchvision>=0.20.1",
    "tqdm>=4.66.5",
    "transformers==4.37.2",
    "wandb>=0.27.2",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
